2021-02: ver. 40.0
* codegen now creates the payload_samples directory with JSON examples for the Resilient UI and mock results for a "mock server"

2020-10: ver. 39.0
* The 'docgen' command creates a single README and updated the README to include information on App Hosts.
* Added the Resilient platform version to the customize.py template.
* The 'package' command replaces tags on Resilient objects in export.res instead of extending them.
* Added environmental variable RES_SDK_DEV.
* Added '--set-version' argument to the dev command.
* Added 'display_name' attribute to the setup.py file.
* The 'codegen', 'codegen --reload' and 'dev --set-version' commands create a /util/data/export.res file that contains the import definition which was previously base64 encoded text in customize.py.
* Before running the 'codegen --reload' on packages created with Resilient SDK < 39.0.0, ensure the MANIFEST.in file includes the line: recursive-include <package_name>/util *
* The 'codegen' and 'package' commands return errors if the package name contains uppercase characters.
* Added a 'clone' command to clone an Action Object.

2020-07: ver. 37.2

* Updates to Dockerfile template
* Support for newest export formats
* Bug fixes.

2020-05: ver. 37.0

* Package created. Using 37 as original version
* Added support for API key permissions in app.json using permissions file.
* Added support for new apphost config section.
* Customization and config properties files now extracted from setup.py.
* Rename 'app:package' command to 'package'.
* Bug fixes.

2020-04: ver. 36.2.dev

* Package dev version created. Using 36.2 as original version
* Added support for API key permissions in app.json using permissions file.
* Added support for new apphost config section.
* Customization and config properties files now extracted from setup.py.
* Rename 'app:package' command to 'package'.
* Bug fixes.

2020-04. ver. 0.0