@@ -1,5 +1,6 @@
 2021-02: ver. 40.0
-* codegen now creates the payload_samples directory with JSON examples for the Resilient UI and mock results for a "mock server"
+* 'codegen' now creates the payload_samples directory with JSON examples for the Resilient UI and mock results for a "mock server"
+* Added '--no-samples' flag to 'package' and when set do not look for the payload_samples directory or try add them to the export.res file
 
 2020-10: ver. 39.0
 * The 'docgen' command creates a single README and updated the README to include information on App Hosts.
